# crypto-tracker

./: .gitignore  Dockerfile.flink-state  Makefile  README.md  docker-compose.yml
aggregator/: Dockerfile  main.py  models.py  requirements.txt
api/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  next.config.js  package.json
frontend/src/components/: Chart.tsx  ControlBar.tsx
frontend/src/pages/: index.tsx
frontend/src/style/: globals.css
ingestor/: Dockerfile  binance_ingestor.py  requirements.txt
ingestor/utils/: verify_topics.py
processor/: Dockerfile  aggregator.py  config.py  deserializer.py  flink-conf.yaml  main.py  models.py  pyproject.toml  requirements.txt  schema.py  sources.py  timestampers.py  topics.py  window_functions.py
processor/redis-kafka-connectors/: pom.xml
processor/sinks/: kafka_sink.py  redis_sink.py
processor/tests/: test_deserializer.py  test_integrations.py  test_kafka_sink.py  test_redis_integration.py  test_redis_sink.py  test_sources.py  test_timestampers.py  test_topics.py  test_window_functions.py
processor/transforms/: deserializer.py  window_functions.py
redis-writer/: Dockerfile  requirements.txt
redis-writer/app/: config.py  main.py  redis_writer.py
state-backend/853d895fc01dcfd545d53d5c403cb036/chk-3/: _metadata  c012c91a-7e1f-41d1-9b5f-27cb087b44f1  f7bd59f0-297f-4228-81f7-d46872c476ad
